--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -6,26 +6,26 @@
         .cls-2{fill:#e6e6e6;}
         .cls-1,.cls-2,.cls-3,.cls-4,.cls-5,.cls-8{stroke:#000;}
         .cls-2,.cls-3,.cls-4,.cls-5{stroke-miterlimit:10;}
-        .cls-3,.cls-4,.cls-5{fill:none;}
+        .cls-3,.cls-4,.cls-5{fill:white;}
         .cls-4{stroke-dasharray:14.26 14.26;}
         .cls-5{stroke-dasharray:13.56 13.56;}
         .cls-6{font-size:12.18px; font-family:MyriadPro-Regular, Myriad Pro;}
     </style>
   </defs>
-     <title>sxxs</title>
-     <rect id='room0' class="cls-1" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
-     <rect id='room12' id='room12' class="cls-2" x="84.49" y="79.43" width="85.91" height="118.38" onclick="alert('room 10!')"/>
-     <rect id='room11' class="cls-3" x="170.4" y="79.43" width="123.12" height="118.38"/>
-     <rect id='room6' class="cls-3" x="238.72" y="10.43" width="41.94" height="47.35"/>
-     <rect id='room5' class="cls-3" x="280.66" y="10.43" width="27.06" height="47.35"/>
-     <polygon id='room4' class="cls-3" points="307.72 10.43 417.31 10.43 417.31 109.88 367.25 109.88 367.25 119.35 332.75 119.35 332.75 86.88 307.72 64.55 307.72 10.43"/>
-     <polygon id='room1' class="cls-3" points="540.43 111.23 585.75 111.23 585.75 119.35 599.96 119.35 599.96 90.93 608.75 90.93 608.75 10.43 526.9 10.43 526.9 111.23 540.43 111.23"/>
-     <rect id='room3' class="cls-3" x="417.31" y="10.43" width="56.15" height="100.79"/>
-     <rect id='room2' class="cls-3" x="473.46" y="10.43" width="53.44" height="100.79"/>
-     <rect id='room10' class="cls-3" x="390.25" y="149.79" width="39.91" height="48.03"/>
-     <rect id='room9' class="cls-3" x="430.16" y="149.79" width="70.01" height="48.03"/>
-     <rect id='room8' class="cls-3" x="500.52" y="149.79" width="82.53" height="48.03"/>
-     <rect id='room7' class="cls-3" x="583.05" y="149.79" width="80.5" height="48.03"/>
+     <title></title>
+     <rect id='A200' class="cls-1" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
+     <rect id='A202' class="cls-3" x="84.49" y="79.43" width="85.91" height="118.38"/>
+     <rect id='A203' class="cls-3" x="170.4" y="79.43" width="123.12" height="118.38"/>
+     <rect id='A204' class="cls-3" x="238.72" y="10.43" width="41.94" height="47.35"/>
+     <rect id='A205' class="cls-3" x="280.66" y="10.43" width="27.06" height="47.35"/>
+     <polygon id='A206' class="cls-3" points="307.72 10.43 417.31 10.43 417.31 109.88 367.25 109.88 367.25 119.35 332.75 119.35 332.75 86.88 307.72 64.55 307.72 10.43"/>
+     <polygon id='A207' class="cls-3" points="540.43 111.23 585.75 111.23 585.75 119.35 599.96 119.35 599.96 90.93 608.75 90.93 608.75 10.43 526.9 10.43 526.9 111.23 540.43 111.23"/>
+     <rect id='A208' class="cls-3" x="417.31" y="10.43" width="56.15" height="100.79"/>
+     <rect id='A209' class="cls-3" x="473.46" y="10.43" width="53.44" height="100.79"/>
+     <rect id='A210' class="cls-3" x="390.25" y="149.79" width="39.91" height="48.03"/>
+     <rect id='A211' class="cls-3" x="430.16" y="149.79" width="70.01" height="48.03"/>
+     <rect id='A212' class="cls-3" x="500.52" y="149.79" width="82.53" height="48.03"/>
+     <rect id='A213' class="cls-3" x="583.05" y="149.79" width="80.5" height="48.03"/>
      <polyline class="cls-4" points="663.55 84.26 663.55 90.26 657.55 90.26"/>
      <line class="cls-5" x1="643.28" y1="90.26" x2="621.88" y2="90.26"/>
      <polyline class="cls-4" points="614.75 90.26 608.75 90.26 608.75 84.26"/>
@@ -35,23 +35,23 @@
      <polyline class="cls-4" points="657.55 10.43 663.55 10.43 663.55 16.43"/>
      <line class="cls-6" x1="663.55" y1="30" x2="663.55" y2="77.47"/>
      <text x="-558.07" y="-466.12"/>
-     <text class="cls-7" transform="translate(565.88 63.06)">1</text>
-     <text class="cls-7" transform="translate(498.23 63.06)">2</text>
-     <text class="cls-7" transform="translate(435.99 63.06)">3</text>
-     <text class="cls-7" transform="translate(359.55 63.06)">4</text>
+     <text class="cls-7" transform="translate(565.88 63.06)">07</text>
+     <text class="cls-7" transform="translate(498.23 63.06)">09</text>
+     <text class="cls-7" transform="translate(435.99 63.06)">08</text>
+     <text class="cls-7" transform="translate(359.55 63.06)">06</text>
      <text class="cls-7" transform="translate(291.91 36)">5</text>
-     <text class="cls-7" transform="translate(256.73 36)">6</text>
-     <text class="cls-7" transform="translate(619.99 176.03)">7</text>
-     <text class="cls-7" transform="translate(538.14 176.03)">8</text>
-     <text class="cls-7" transform="translate(462.38 176.03)">9</text>
+     <text class="cls-7" transform="translate(256.73 36)">4</text>
+     <text class="cls-7" transform="translate(619.99 176.03)">13</text>
+     <text class="cls-7" transform="translate(538.14 176.03)">12</text>
+     <text class="cls-7" transform="translate(462.38 176.03)">11</text>
      <text class="cls-7" transform="translate(403.78 176.03)">10</text>
-     <text class="cls-7" transform="translate(225.87 146.94)">11</text>
-     <text class="cls-7" transform="translate(121.02 146.94)">12</text>
+     <text class="cls-7" transform="translate(225.87 146.94)">03</text>
+     <text class="cls-7" transform="translate(121.02 146.94)">02</text>
      <text class="cls-7" transform="translate(632.94 59.68)">T</text>
      <path class="cls-8" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
      <path class="cls-8" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
   </svg>
-  <svg id="Layer_2" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75" display='none'>
+  <!-- <svg id="Layer_2" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75" display='none'>
      <defs>
         <style>
           .cls-21{fill:#e6e6e6;opacity:0.64;}
@@ -111,5 +111,5 @@
      <text class="cls-211" transform="translate(464.43 152.06)">21</text>
      <path id='room0' class="cls-22" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
      <path id='room0' class="cls-22" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
-  </svg>
+  </svg> -->
 </div>
