--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -26,7 +26,7 @@
     <mat-card-subtitle>Guldbergsgade 29N, DK-2200 Copenhagen N</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <button mat-button (click)="getBookingTimes();"  routerLink="booking" routerLinkActive="active">Book</button>
+    <button mat-button (click)="getBookingTimes();"  routerLinkActive="active">Book</button>
   </mat-card-actions>
 </mat-card>
 </div>
