--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="svgcontainer" >
-  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75">
+  <!-- <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75">
     <defs>
        <style>
         .cls-1,.cls-8{fill:#e6e6e6;stroke-linejoin:round;stroke-width:0.75px;}
@@ -50,66 +50,57 @@
      <text class="cls-7" transform="translate(632.94 59.68)">T</text>
      <path class="cls-8" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
      <path class="cls-8" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
-  </svg>
-  <!-- <svg id="Layer_2" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75" display='none'>
-     <defs>
-        <style>
-          .cls-21{fill:#e6e6e6;opacity:0.64;}
-          .cls-21,.cls-210,.cls-23,.cls-24,.cls-25,.cls-26,.cls-27,.cls-28,.cls-29{stroke:#000;}
-          .cls-21,.cls-23{stroke-linejoin:round;stroke-width:0.75px;}
-          .cls-22{fill:#e6e7e8;stroke:#231f20;stroke-linecap:round;}
-          .cls-210,.cls-22,.cls-24,.cls-25,.cls-26,.cls-27,.cls-28,.cls-29{stroke-miterlimit:10;}
-          .cls-23,.cls-24{fill:#e6e6e6;}
-          .cls-210,.cls-25,.cls-26,.cls-27,.cls-28,.cls-29{fill:none;}
-          .cls-26{stroke-dasharray:11.67 11.67;}
-          .cls-27{stroke-dasharray:13.8 13.8;}
-          .cls-28{stroke-dasharray:10 10;}
-          .cls-29{stroke-dasharray:7 7;}
-          .cls-210{stroke-dasharray:12 12;}
-          .cls-211{font-size:12.18px;font-family:MyriadPro-Regular, Myriad Pro;}
-        </style>
-     </defs>
-     <title>layer2</title>
-     <rect id='room0' class="cls-21" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
-     <rect id='room21' class="cls-23" x="543.43" y="114.38" width="124" height="83" onclick="alert('room 10!')"/>
-     <rect id='room22' class="cls-23" x="290.43" y="102.38" width="108" height="95" onclick="alert('room 10!')"/>
-     <rect id='room23' class="cls-23" x="86.43" y="79.38" width="94" height="118" onclick="alert('room 10!')"/>
-     <rect id='room24' class="cls-23" x="86.43" y="8.38" width="94" height="48" onclick="alert('room 10!')"/>
-     <rect id='room25' class="cls-23" x="180.43" y="8.38" width="28" height="48" onclick="alert('room 10!')"/>
-     <rect id='room26' class="cls-23" x="208.43" y="8.38" width="55" height="48" onclick="alert('room 10!')"/>
-     <rect id='room27' class="cls-23" x="420.43" y="8.38" width="30" height="48" onclick="alert('room 10!')"/>
-     <rect id='room28' class="cls-23" x="450.43" y="8.38" width="54" height="48" onclick="alert('room 10!')"/>
-     <rect id='room29' class="cls-23" x="504.43" y="8.38" width="68" height="48" onclick="alert('room 10!')"/>
-     <rect id='room30' class="cls-23" x="557.43" y="56.38" width="48" height="33" onclick="alert('room 10!')"/>
-     <rect id='room31' class="cls-23" x="572.43" y="8.38" width="48" height="48" onclick="alert('room 10!')"/>
-     <path class="cls-24" d="M724.5,428.5" transform="translate(-558.07 -466.12)"/>
-     <polygon id='room32' class="cls-24" points="398.43 197.38 543.43 197.38 543.43 114.38 510.43 79.38 420.43 79.38 398.43 102.38 398.43 197.38"/>
-     <polygon id='room33' class="cls-24" points="180.43 197.38 290.43 197.38 290.43 102.38 263.43 79.38 180.43 79.38 180.43 197.38"/>
-     <polyline class="cls-25" points="620.43 14.38 620.43 8.38 626.43 8.38"/>
-     <line class="cls-26" x1="638.09" y1="8.38" x2="655.59" y2="8.38"/>
-     <polyline class="cls-25" points="661.43 8.38 667.43 8.38 667.43 14.38"/>
-     <line class="cls-27" x1="667.43" y1="28.17" x2="667.43" y2="76.47"/>
-     <polyline class="cls-25" points="667.43 83.38 667.43 89.38 661.43 89.38"/>
-     <line class="cls-28" x1="651.43" y1="89.38" x2="616.43" y2="89.38"/>
-     <polyline class="cls-25" points="611.43 89.38 605.43 89.38 605.43 83.38"/>
-     <line class="cls-29" x1="605.43" y1="76.38" x2="605.43" y2="65.88"/>
-     <polyline class="cls-25" points="605.43 62.38 605.43 56.38 611.43 56.38"/>
-     <polyline class="cls-25" points="614.43 56.38 620.43 56.38 620.43 50.38"/>
-     <line class="cls-210" x1="620.43" y1="38.38" x2="620.43" y2="20.38"/>
-     <text class="cls-211" transform="translate(127.43 34.06)">20</text>
-     <text class="cls-211" transform="translate(229.43 34.06)">18</text>
-     <text class="cls-211" transform="translate(188.43 34.06)">19</text>
-     <text class="cls-211" transform="translate(471.43 34.06)">16</text>
-     <text class="cls-211" transform="translate(429.43 36.06)">17</text>
-     <text class="cls-211" transform="translate(599.43 158.06)">21</text>
-     <text class="cls-211" transform="translate(575.43 75.06)">14</text>
-     <text class="cls-211" transform="translate(590.43 34.06)">13</text>
-     <text class="cls-211" transform="translate(532.43 34.06)">15</text>
-     <text class="cls-211" transform="translate(130.43 151.06)">24</text>
-     <text class="cls-211" transform="translate(227.43 152.06)">23</text>
-     <text class="cls-211" transform="translate(338.43 152.06)">22</text>
-     <text class="cls-211" transform="translate(464.43 152.06)">21</text>
-     <path id='room0' class="cls-22" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
-     <path id='room0' class="cls-22" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
   </svg> -->
+
+<svg id="Layer_1" data-name="Layer 1"
+xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 935">
+<defs>
+  <style>.cls-1{fill:#fff;}.cls-2{fill:none;}.cls-2,.cls-4{stroke:#000;stroke-miterlimit:10;}.cls-3{font-size:22.92px;font-family:Arial;}.cls-4{fill:#282828;}</style>
+</defs>
+<title></title>
+<rect class="cls-1" width="1280" height="935"/>
+<rect id='A201' class="cls-2" x="542.7" y="442.12" width="99.74" height="80.21"/>
+<text class="cls-3" transform="translate(568.14 488.03) scale(1.02 1)">A201</text>
+<rect id='A202' class="cls-2" x="457.21" y="602.54" width="66.06" height="120.96"/>
+<text class="cls-3" transform="translate(465.81 677.74) scale(1.02 1)">A202</text>
+<rect id='A203' class="cls-2" x="385.96" y="602.54" width="71.24" height="120.96"/>
+<text class="cls-3" transform="translate(397.15 677.74) scale(1.02 1)">A203</text>
+<rect id='A204' class="cls-2" x="283.63" y="602.54" width="102.33" height="120.96"/>
+<text class="cls-3" transform="translate(311.66 677.74) scale(1.02 1)">A204</text>
+<rect id='A205' class="cls-2" x="283.63" y="442.12" width="102.33" height="80.21"/>
+<text class="cls-3" transform="translate(310.37 490.58) scale(1.02 1)">A205</text>
+<rect id='A206' class="cls-2" x="283.63" y="352.99" width="102.33" height="89.13"/>
+<text class="cls-3" transform="translate(310.37 402.73) scale(1.02 1)">A206</text>
+<rect id='A207' class="cls-2" x="283.63" y="274.05" width="102.33" height="78.94"/>
+<text class="cls-3" transform="translate(310.37 318.69) scale(1.02 1)">A207</text>
+<rect id='A208' class="cls-2" x="283.63" y="193.84" width="102.33" height="80.21"/>
+<text class="cls-3" transform="translate(310.37 239.75) scale(1.02 1)">A208</text>
+<rect id='A209' class="cls-2" x="283.63" y="105.99" width="102.33" height="87.85"/>
+<text class="cls-3" transform="translate(311.66 157) scale(1.02 1)">A209</text>
+<rect id='A210' class="cls-2" x="283.63" y="61.42" width="62.18" height="44.56"/>
+<text class="cls-3" transform="translate(289.64 89.51) scale(1.02 1)">A210</text>
+<rect id='A211' class="cls-2" x="457.21" y="103.44" width="75.13" height="90.4"/>
+<text class="cls-3" transform="translate(469.69 154.45) scale(1.02 1)">A211</text>
+<rect id='A212' class="cls-2" x="532.34" y="91.98" width="79.02" height="101.86"/>
+<text class="cls-3" transform="translate(547.42 148.08) scale(1.02 1)">A212</text>
+<rect id='A213' class="cls-2" x="611.36" y="91.98" width="85.49" height="101.86"/>
+<text class="cls-3" transform="translate(629.02 148.08) scale(1.02 1)">A213</text>
+<rect id='A214' class="cls-2" x="696.85" y="91.98" width="77.72" height="101.86"/>
+<text class="cls-3" transform="translate(710.63 148.08) scale(1.02 1)">A214</text>
+<rect id='A215' class="cls-2" x="774.57" y="91.98" width="80.31" height="101.86"/>
+<text class="cls-3" transform="translate(789.65 148.08) scale(1.02 1)">A215</text>
+<rect id='A216' class="cls-2" x="854.88" y="24.5" width="130.83" height="188.44"/>
+<text class="cls-3" transform="translate(895.87 136.62) scale(1.02 1)">A216</text>
+<rect id='A217' class="cls-2" x="985.71" y="24.5" width="76.43" height="188.44"/>
+<text class="cls-3" transform="translate(999.5 136.62) scale(1.02 1)">A217</text>
+<rect id='A218' class="cls-2" x="854.88" y="313.52" width="90.67" height="128.6"/>
+<text class="cls-3" transform="translate(875.14 402.73) scale(1.02 1)">A218</text>
+<rect  id='A219'class="cls-2" x="783.64" y="352.99" width="71.24" height="89.13"/>
+<text class="cls-3" transform="translate(794.83 402.73) scale(1.02 1)">A219</text>
+<rect id='A220' class="cls-2" x="708.51" y="352.99" width="75.13" height="89.13"/>
+<text class="cls-3" transform="translate(720.99 402.73) scale(1.02 1)">A220</text>
+<rect id='A221' class="cls-2" x="642.44" y="352.99" width="66.06" height="89.13"/>
+<text class="cls-3" transform="translate(651.04 402.73) scale(1.02 1)">A221</text>
+<polygon class="cls-4" points="532.34 33.41 345.81 33.41 345.81 105.99 385.96 105.99 385.96 522.33 283.63 522.33 283.63 602.54 523.27 602.54 523.27 672.51 642.45 672.57 642.45 522.33 542.7 522.33 542.7 442.12 457.21 442.12 457.21 274.05 642.45 274.05 642.45 352.99 854.88 352.99 854.88 313.52 945.56 313.52 945.56 212.94 854.88 212.94 854.88 193.84 457.21 193.84 457.21 103.44 532.34 103.44 532.34 91.98 532.34 33.41"/>
+</svg>
 </div>
