--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -1,3 +1,5 @@
+<button (click)="bookRoom();">Boi</button>
+
 <div class="svgcontainer" >
   <!-- <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75">
     <defs>
