--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -1,106 +1,54 @@
+<div class="mybackground" >
 <div class="svgcontainer" >
-  <!-- <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75">
-    <defs>
-       <style>
-        .cls-1,.cls-8{fill:#e6e6e6;stroke-linejoin:round;stroke-width:0.75px;}
-        .cls-2{fill:#e6e6e6;}
-        .cls-1,.cls-2,.cls-3,.cls-4,.cls-5,.cls-8{stroke:#000;}
-        .cls-2,.cls-3,.cls-4,.cls-5{stroke-miterlimit:10;}
-        .cls-3,.cls-4,.cls-5{fill:white;}
-        .cls-4{stroke-dasharray:14.26 14.26;}
-        .cls-5{stroke-dasharray:13.56 13.56;}
-        .cls-6{font-size:12.18px; font-family:MyriadPro-Regular, Myriad Pro;}
-    </style>
-  </defs>
-     <title></title>
-     <rect id='A200' class="cls-1" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
-     <rect id='A202' class="cls-3" x="84.49" y="79.43" width="85.91" height="118.38"/>
-     <rect id='A203' class="cls-3" x="170.4" y="79.43" width="123.12" height="118.38"/>
-     <rect id='A204' class="cls-3" x="238.72" y="10.43" width="41.94" height="47.35"/>
-     <rect id='A205' class="cls-3" x="280.66" y="10.43" width="27.06" height="47.35"/>
-     <polygon id='A206' class="cls-3" points="307.72 10.43 417.31 10.43 417.31 109.88 367.25 109.88 367.25 119.35 332.75 119.35 332.75 86.88 307.72 64.55 307.72 10.43"/>
-     <polygon id='A207' class="cls-3" points="540.43 111.23 585.75 111.23 585.75 119.35 599.96 119.35 599.96 90.93 608.75 90.93 608.75 10.43 526.9 10.43 526.9 111.23 540.43 111.23"/>
-     <rect id='A208' class="cls-3" x="417.31" y="10.43" width="56.15" height="100.79"/>
-     <rect id='A209' class="cls-3" x="473.46" y="10.43" width="53.44" height="100.79"/>
-     <rect id='A210' class="cls-3" x="390.25" y="149.79" width="39.91" height="48.03"/>
-     <rect id='A211' class="cls-3" x="430.16" y="149.79" width="70.01" height="48.03"/>
-     <rect id='A212' class="cls-3" x="500.52" y="149.79" width="82.53" height="48.03"/>
-     <rect id='A213' class="cls-3" x="583.05" y="149.79" width="80.5" height="48.03"/>
-     <polyline class="cls-4" points="663.55 84.26 663.55 90.26 657.55 90.26"/>
-     <line class="cls-5" x1="643.28" y1="90.26" x2="621.88" y2="90.26"/>
-     <polyline class="cls-4" points="614.75 90.26 608.75 90.26 608.75 84.26"/>
-     <line class="cls-6" x1="608.75" y1="70.69" x2="608.75" y2="23.22"/>
-     <polyline class="cls-4" points="608.75 16.43 608.75 10.43 614.75 10.43"/>
-     <line class="cls-5" x1="629.02" y1="10.43" x2="650.41" y2="10.43"/>
-     <polyline class="cls-4" points="657.55 10.43 663.55 10.43 663.55 16.43"/>
-     <line class="cls-6" x1="663.55" y1="30" x2="663.55" y2="77.47"/>
-     <text x="-558.07" y="-466.12"/>
-     <text class="cls-7" transform="translate(565.88 63.06)">07</text>
-     <text class="cls-7" transform="translate(498.23 63.06)">09</text>
-     <text class="cls-7" transform="translate(435.99 63.06)">08</text>
-     <text class="cls-7" transform="translate(359.55 63.06)">06</text>
-     <text class="cls-7" transform="translate(291.91 36)">5</text>
-     <text class="cls-7" transform="translate(256.73 36)">4</text>
-     <text class="cls-7" transform="translate(619.99 176.03)">13</text>
-     <text class="cls-7" transform="translate(538.14 176.03)">12</text>
-     <text class="cls-7" transform="translate(462.38 176.03)">11</text>
-     <text class="cls-7" transform="translate(403.78 176.03)">10</text>
-     <text class="cls-7" transform="translate(225.87 146.94)">03</text>
-     <text class="cls-7" transform="translate(121.02 146.94)">02</text>
-     <text class="cls-7" transform="translate(632.94 59.68)">T</text>
-     <path class="cls-8" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
-     <path class="cls-8" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
-  </svg> -->
+  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 634.37 572">
+    <title>KEAMAPGULB</title>
+    <path class="cls-1" d="M351,237.34h37.27a7.61,7.61,0,0,0,7.61-7.61h0a7.6,7.6,0,0,1,7.6-7.6H570.05a7.61,7.61,0,0,1,7.61,7.6V251a7.61,7.61,0,0,0,7.61,7.61H765.54a7.61,7.61,0,0,0,7.6-7.61V220.61a7.61,7.61,0,0,1,7.61-7.61h189.4a7.61,7.61,0,0,1,7.6,7.61V391a7.61,7.61,0,0,1-7.6,7.61h-70a7.61,7.61,0,0,0-7.61,7.6V563a7.6,7.6,0,0,1-7.53,7.6L668.1,572.71a7.6,7.6,0,0,0-7.53,7.6V734a7.61,7.61,0,0,1-7.61,7.6H576.9a7.61,7.61,0,0,0-7.61,7.61v28.14a7.61,7.61,0,0,1-7.6,7.61H351a7.61,7.61,0,0,1-7.61-7.61V245A7.61,7.61,0,0,1,351,237.34Z" transform="translate(-343.38 -213)"/>
+    <path class="cls-2" d="M551,249.9H426a5.6,5.6,0,0,0-5.59,5.6v41.79a5.6,5.6,0,0,0,5.59,5.6h18.13a5.6,5.6,0,0,1,5.6,5.59V601.25a5.6,5.6,0,0,1-5.6,5.6H380.65a5.59,5.59,0,0,0-5.59,5.59v47.37a5.6,5.6,0,0,0,5.59,5.6H544.42A5.59,5.59,0,0,1,550,671v39.9a5.59,5.59,0,0,0,5.59,5.59l75.82,0a5.6,5.6,0,0,0,5.6-5.59v-98.5a5.6,5.6,0,0,0-5.6-5.59H569.79a5.6,5.6,0,0,1-5.59-5.6V553.88a5.6,5.6,0,0,0-5.6-5.59H507.38a5.6,5.6,0,0,1-5.6-5.6V431.18a5.59,5.59,0,0,1,5.6-5.59h124a5.6,5.6,0,0,1,5.6,5.59v46.44a5.6,5.6,0,0,0,5.59,5.6h143.9a5.6,5.6,0,0,0,5.6-5.6V460a5.6,5.6,0,0,1,5.6-5.6h55a5.6,5.6,0,0,0,5.6-5.59V386.56a5.6,5.6,0,0,0-5.6-5.59h-55a5.6,5.6,0,0,1-5.6-5.6v-2.75a5.59,5.59,0,0,0-5.6-5.59H507.38a5.6,5.6,0,0,1-5.6-5.6V306.62a5.59,5.59,0,0,1,5.6-5.59H551a5.6,5.6,0,0,0,5.6-5.6V255.5A5.6,5.6,0,0,0,551,249.9Z" transform="translate(-343.38 -213)"/>
+    <rect id="A201" class="cls-3" x="220.81" y="335.29" width="72.82" height="58.56" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(239.39 368.81) scale(1.02 1)">A201</text>
+    <rect id="A202" class="cls-3" x="158.4" y="452.41" width="48.23" height="88.31" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(164.67 507.31) scale(1.02 1)">A202</text>
+    <rect id="A203" class="cls-3" x="106.38" y="452.41" width="52.01" height="88.31" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(114.55 507.31) scale(1.02 1)">A203</text>
+    <rect id="A204" class="cls-3" x="31.67" y="452.41" width="74.71" height="88.31" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(52.14 507.31) scale(1.02 1)">A204</text>
+    <rect id="A205" class="cls-3" x="31.67" y="335.29" width="74.71" height="58.56" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(51.19 370.67) scale(1.02 1)">A205</text>
+    <rect id="A206" class="cls-3" x="31.67" y="270.22" width="74.71" height="65.07" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(51.19 306.53) scale(1.02 1)">A206</text>
+    <rect id="A207" class="cls-3" x="31.67" y="212.59" width="74.71" height="57.63" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(51.19 245.18) scale(1.02 1)">A207</text>
+    <rect id="A208" class="cls-3" x="31.67" y="154.03" width="74.71" height="58.56" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(51.19 187.55) scale(1.02 1)">A208</text>
+    <rect id="A209" class="cls-3" x="31.67" y="89.89" width="74.71" height="64.14" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(51.19 127.55) scale(1.02 1)">A209</text>
+    <rect id="A210" class="cls-3" x="31.67" y="57.35" width="45.39" height="32.53" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(37.35 78.54) scale(1.02 1)">A210</text>
+    <rect id="A211" class="cls-3" x="158.4" y="88.03" width="54.85" height="66" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(167.51 125.27) scale(1.02 1)">A211</text>
+    <rect id="A212" class="cls-3" x="213.25" y="79.66" width="57.69" height="74.36" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(224.25 120.62) scale(1.02 1)">A212</text>
+    <rect id="A213" class="cls-3" x="270.94" y="79.66" width="62.42" height="74.36" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(283.83 120.62) scale(1.02 1)">A213</text>
+    <rect id="A214" class="cls-3" x="333.35" y="79.66" width="56.74" height="74.36" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(343.41 120.62) scale(1.02 1)">A214</text>
+    <rect id="A215" class="cls-3" x="390.09" y="79.66" width="58.63" height="74.36" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(401.1 120.62) scale(1.02 1)">A215</text>
+    <text class="cls-4" transform="translate(401.1 120.62) scale(1.02 1)">A215</text>
+    <rect id="A216" class="cls-3" x="448.73" y="30.4" width="95.52" height="137.57" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(478.65 112.25) scale(1.02 1)">A216</text>
+    <rect id="A217" class="cls-3" x="544.24" y="30.4" width="55.8" height="137.57" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(554.3 112.25) scale(1.02 1)">A217</text>
+    <rect id="A218" class="cls-3" x="448.73" y="241.4" width="66.2" height="93.88" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(463.52 306.53) scale(1.02 1)">A218</text>
+    <rect id="A219" class="cls-3" x="396.71" y="270.22" width="52.01" height="65.07" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(404.88 306.53) scale(1.02 1)">A219</text>
+    <rect id="A220" class="cls-3" x="341.86" y="270.22" width="54.85" height="65.07" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(350.98 306.53) scale(1.02 1)">A220</text>
+    <rect id="A221" class="cls-3" x="293.63" y="270.22" width="48.23" height="65.07" (click)="onClick($event)"/>
+    <text class="cls-4" transform="translate(299.91 306.53) scale(1.02 1)">A221</text>
 
-<svg id="Layer_1" data-name="Layer 1"
-xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 935">
-<defs>
-  <style>.cls-1{fill:#fff;}.cls-2{fill:none;}.cls-2,.cls-4{stroke:#000;stroke-miterlimit:10;}.cls-3{font-size:22.92px;font-family:Arial;}.cls-4{fill:#282828;}</style>
-</defs>
-<title></title>
-<rect class="cls-1" width="1280" height="935"/>
-<rect id='A201' class="cls-2" x="542.7" y="442.12" width="99.74" height="80.21"/>
-<text class="cls-3" transform="translate(568.14 488.03) scale(1.02 1)">A201</text>
-<rect id='A202' class="cls-2" x="457.21" y="602.54" width="66.06" height="120.96"/>
-<text class="cls-3" transform="translate(465.81 677.74) scale(1.02 1)">A202</text>
-<rect id='A203' class="cls-2" x="385.96" y="602.54" width="71.24" height="120.96"/>
-<text class="cls-3" transform="translate(397.15 677.74) scale(1.02 1)">A203</text>
-<rect id='A204' class="cls-2" x="283.63" y="602.54" width="102.33" height="120.96"/>
-<text class="cls-3" transform="translate(311.66 677.74) scale(1.02 1)">A204</text>
-<rect id='A205' class="cls-2" x="283.63" y="442.12" width="102.33" height="80.21"/>
-<text class="cls-3" transform="translate(310.37 490.58) scale(1.02 1)">A205</text>
-<rect id='A206' class="cls-2" x="283.63" y="352.99" width="102.33" height="89.13"/>
-<text class="cls-3" transform="translate(310.37 402.73) scale(1.02 1)">A206</text>
-<rect id='A207' class="cls-2" x="283.63" y="274.05" width="102.33" height="78.94"/>
-<text class="cls-3" transform="translate(310.37 318.69) scale(1.02 1)">A207</text>
-<rect id='A208' class="cls-2" x="283.63" y="193.84" width="102.33" height="80.21"/>
-<text class="cls-3" transform="translate(310.37 239.75) scale(1.02 1)">A208</text>
-<rect id='A209' class="cls-2" x="283.63" y="105.99" width="102.33" height="87.85"/>
-<text class="cls-3" transform="translate(311.66 157) scale(1.02 1)">A209</text>
-<rect id='A210' class="cls-2" x="283.63" y="61.42" width="62.18" height="44.56"/>
-<text class="cls-3" transform="translate(289.64 89.51) scale(1.02 1)">A210</text>
-<rect id='A211' class="cls-2" x="457.21" y="103.44" width="75.13" height="90.4"/>
-<text class="cls-3" transform="translate(469.69 154.45) scale(1.02 1)">A211</text>
-<rect id='A212' class="cls-2" x="532.34" y="91.98" width="79.02" height="101.86"/>
-<text class="cls-3" transform="translate(547.42 148.08) scale(1.02 1)">A212</text>
-<rect id='A213' class="cls-2" x="611.36" y="91.98" width="85.49" height="101.86"/>
-<text class="cls-3" transform="translate(629.02 148.08) scale(1.02 1)">A213</text>
-<rect id='A214' class="cls-2" x="696.85" y="91.98" width="77.72" height="101.86"/>
-<text class="cls-3" transform="translate(710.63 148.08) scale(1.02 1)">A214</text>
-<rect id='A215' class="cls-2" x="774.57" y="91.98" width="80.31" height="101.86"/>
-<text class="cls-3" transform="translate(789.65 148.08) scale(1.02 1)">A215</text>
-<rect id='A216' class="cls-2" x="854.88" y="24.5" width="130.83" height="188.44"/>
-<text class="cls-3" transform="translate(895.87 136.62) scale(1.02 1)">A216</text>
-<rect id='A217' class="cls-2" x="985.71" y="24.5" width="76.43" height="188.44"/>
-<text class="cls-3" transform="translate(999.5 136.62) scale(1.02 1)">A217</text>
-<rect id='A218' class="cls-2" x="854.88" y="313.52" width="90.67" height="128.6"/>
-<text class="cls-3" transform="translate(875.14 402.73) scale(1.02 1)">A218</text>
-<rect  id='A219'class="cls-2" x="783.64" y="352.99" width="71.24" height="89.13"/>
-<text class="cls-3" transform="translate(794.83 402.73) scale(1.02 1)">A219</text>
-<rect id='A220' class="cls-2" x="708.51" y="352.99" width="75.13" height="89.13"/>
-<text class="cls-3" transform="translate(720.99 402.73) scale(1.02 1)">A220</text>
-<rect id='A221' class="cls-2" x="642.44" y="352.99" width="66.06" height="89.13"/>
-<text class="cls-3" transform="translate(651.04 402.73) scale(1.02 1)">A221</text>
-<polygon class="cls-4" points="532.34 33.41 345.81 33.41 345.81 105.99 385.96 105.99 385.96 522.33 283.63 522.33 283.63 602.54 523.27 602.54 523.27 672.51 642.45 672.57 642.45 522.33 542.7 522.33 542.7 442.12 457.21 442.12 457.21 274.05 642.45 274.05 642.45 352.99 854.88 352.99 854.88 313.52 945.56 313.52 945.56 212.94 854.88 212.94 854.88 193.84 457.21 193.84 457.21 103.44 532.34 103.44 532.34 91.98 532.34 33.41"/>
-</svg>
+ </svg>
 </div>
+</div>
+
