--- a/RoomBooker/src/app/map/map.component.css
+++ b/RoomBooker/src/app/map/map.component.css
@@ -10,11 +10,15 @@
     padding-bottom: 100%;
 
 }
+.mybackground{
+  background-color: #e8ebf7;
+  margin: 20px;
+  border-radius: 10px
+
+}
 .svgcontainer{
-  padding-top: 30px;
-  position: relative;
-  z-index: 1;
-  width: 75%;
+  padding: 15px;
+  width: 50%;
   margin: 0 auto;
 }
 .scaling-svg {
@@ -28,4 +32,31 @@
 svg:hover #room,
 svg:hover #due {
   fill: #ffffad;
+}
+
+.cls-1,.cls-2,.cls-3{
+  fill:#fff;
+}
+.cls-1{
+  opacity:0.5;
+}
+.cls-2,.cls-3{
+  stroke:#000;
+  stroke-linejoin:round;
+  stroke-width:2px;
+}
+.cls-2{
+  opacity:0.83;
+}
+.cls-3{
+  stroke-linecap:round;
+  transition: all 1s;
+}
+.cls-3:hover {
+  fill:rgba(89, 169, 230, 0.222);
+  stroke-width:3px;
+}
+.cls-4{
+  font-size:15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
