make booking with svg

--- a/RoomBooker/src/app/map/map.component.css
+++ b/RoomBooker/src/app/map/map.component.css
@@ -53,7 +53,7 @@ svg:hover #due {
   transition: all 1s;
 }
 .cls-3:hover {
-  fill:rgba(89, 169, 230, 0.222);
+  fill:rgba(63,81,181, 0.222);
   stroke-width:3px;
 }
 .cls-4{
