--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -1,8 +1,7 @@
 <div class="mybackground" >
 
 <div class="svgcontainer" >
-  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 634.37 572">
-    <title>KEAMAPGULB</title>
+  <svg class='shadow'id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 634.37 572">
     <path class="cls-1" d="M351,237.34h37.27a7.61,7.61,0,0,0,7.61-7.61h0a7.6,7.6,0,0,1,7.6-7.6H570.05a7.61,7.61,0,0,1,7.61,7.6V251a7.61,7.61,0,0,0,7.61,7.61H765.54a7.61,7.61,0,0,0,7.6-7.61V220.61a7.61,7.61,0,0,1,7.61-7.61h189.4a7.61,7.61,0,0,1,7.6,7.61V391a7.61,7.61,0,0,1-7.6,7.61h-70a7.61,7.61,0,0,0-7.61,7.6V563a7.6,7.6,0,0,1-7.53,7.6L668.1,572.71a7.6,7.6,0,0,0-7.53,7.6V734a7.61,7.61,0,0,1-7.61,7.6H576.9a7.61,7.61,0,0,0-7.61,7.61v28.14a7.61,7.61,0,0,1-7.6,7.61H351a7.61,7.61,0,0,1-7.61-7.61V245A7.61,7.61,0,0,1,351,237.34Z" transform="translate(-343.38 -213)"/>
     <path class="cls-2" d="M551,249.9H426a5.6,5.6,0,0,0-5.59,5.6v41.79a5.6,5.6,0,0,0,5.59,5.6h18.13a5.6,5.6,0,0,1,5.6,5.59V601.25a5.6,5.6,0,0,1-5.6,5.6H380.65a5.59,5.59,0,0,0-5.59,5.59v47.37a5.6,5.6,0,0,0,5.59,5.6H544.42A5.59,5.59,0,0,1,550,671v39.9a5.59,5.59,0,0,0,5.59,5.59l75.82,0a5.6,5.6,0,0,0,5.6-5.59v-98.5a5.6,5.6,0,0,0-5.6-5.59H569.79a5.6,5.6,0,0,1-5.59-5.6V553.88a5.6,5.6,0,0,0-5.6-5.59H507.38a5.6,5.6,0,0,1-5.6-5.6V431.18a5.59,5.59,0,0,1,5.6-5.59h124a5.6,5.6,0,0,1,5.6,5.59v46.44a5.6,5.6,0,0,0,5.59,5.6h143.9a5.6,5.6,0,0,0,5.6-5.6V460a5.6,5.6,0,0,1,5.6-5.6h55a5.6,5.6,0,0,0,5.6-5.59V386.56a5.6,5.6,0,0,0-5.6-5.59h-55a5.6,5.6,0,0,1-5.6-5.6v-2.75a5.59,5.59,0,0,0-5.6-5.59H507.38a5.6,5.6,0,0,1-5.6-5.6V306.62a5.59,5.59,0,0,1,5.6-5.59H551a5.6,5.6,0,0,0,5.6-5.6V255.5A5.6,5.6,0,0,0,551,249.9Z" transform="translate(-343.38 -213)"/>
     <rect id="A201" class="cls-3" x="220.81" y="335.29" width="72.82" height="58.56" (click)="onClick($event)"/>
