--- a/RoomBooker/src/app/map/map.component.css
+++ b/RoomBooker/src/app/map/map.component.css
@@ -1,15 +1,3 @@
-.center {
-    margin: auto;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    position: relative;
-    height: 100%;
-    width: 60%;
-    padding-bottom: 100%;
-
-}
 .mybackground{
   background-color: #e8ebf7;
   margin: 20px;
@@ -21,24 +9,15 @@
   width: 50%;
   margin: 0 auto;
 }
-.scaling-svg {
- position: absolute;
- height: 50%;
- width: 90%;
- left: 0;
- top: 0;
+.shadow {
+  /* Use -webkit- only if supporting: Chrome < 54, iOS < 9.3, Android < 4.4.4 */
+  -webkit-filter: drop-shadow( 0px 3px 10px rgba(0, 0, 0, 0.393) );
+          filter: drop-shadow( 0px 3px 10px rgba(0, 0, 0, 0.393) );
 }
-
-svg:hover #room,
-svg:hover #due {
-  fill: #ffffad;
-}
-
 .cls-1,.cls-2,.cls-3{
   fill:#fff;
 }
 .cls-1{
-  opacity:0.5;
 }
 .cls-2,.cls-3{
   stroke:#000;
