--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -6,7 +6,7 @@
 <div class="titleContainer">
   <form [formGroup]="dateForm">
   <mat-form-field class="example-full-width">
-    <input formControlName="date" matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
+    <input id="date" formControlName="date" matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
