--- a/RoomBooker/src/app/popup/popup.component.html
+++ b/RoomBooker/src/app/popup/popup.component.html
@@ -1,4 +1,9 @@
 <h1 mat-dialog-title>Confirm booking?</h1>
+<p>Your room: {{this.roomID}}</p>
+<p>Date of booking: {{this.date}}</p>
+<p>From: {{this.fromtime}}</p>
+<p>To: {{this.totime}}</p>
+  
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
   <button mat-button (click)="onBookClick()" cdkFocusInitial>Yes</button>
