--- a/RoomBooker/src/app/popup/popup.component.html
+++ b/RoomBooker/src/app/popup/popup.component.html
@@ -20,6 +20,6 @@
     <p>To: {{this.totime}}</p>
 <div  mat-dialog-actions>
   <button mat-button (click)="redirectHomepage()" cdkFocusInitial>Homepage</button>
-  <button mat-button (click)="redirectHomepage()" cdkFocusInitial disabled=true>My Bookings</button>
+  <button mat-button (click)="redirectMybookings()" cdkFocusInitial>My Bookings</button>
 </div>
 </div>
