--- a/RoomBooker/src/app/userpage/userpage.component.html
+++ b/RoomBooker/src/app/userpage/userpage.component.html
@@ -31,8 +31,8 @@
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef>
       </th>
-    <td mat-cell *matCellDef=" let id = index;">
-      <button mat-button color="warn" (click)="deleteBooking(id)"> Delete</button>
+    <td mat-cell *matCellDef="let element">
+      <button value="{{element.bookingID}}" mat-button color="warn" #ref (click)="deleteBooking(element.bookingID)"> Delete</button>
     </td>
   </ng-container>
 
